# CSC621_project

./: README.md  pick_region.1.cxx
Archive/: Team_wind_presentation.pptx
CellPicking/: CMakeLists.txt
ConfidenceConnectedImageFilter/: CMakeLists.txt  ConfidenceConnectedImageFilter.cxx
ContourTriangulator/: CMakeLists.txt
HighlightSelectedPoints/: CMakeLists.txt
ImageToVTKImageFilter/: CMakeLists.txt
LabelContourImageFilter/: CMakeLists.txt
PickPixel/: CMakeLists.txt  PickPixel.cxx
PointPicker/: CMakeLists.txt  PointPicker.cxx
RegionGrowImageFilter/: CMakeLists.txt  RegionGrowImageFilter.cxx
ScalarToRGBColormapImageFilter/: CMakeLists.txt  ScalarToRGBColormapImageFilter.cxx
SelectionSource/: CMakeLists.txt
SideBySideViewports/: CMakeLists.txt  SideBySideViewports.cxx
Slider/: CMakeLists.txt
Team_Wind/read_dcm/: README.md
dilation/: CMakeLists.txt  README.md  dilation.cxx
erosion/: CMakeLists.txt  README.md  erosion.cxx
itkVtkImageConvertDICOM/: CMakeLists.txt
itk_to_vtk/: CMakeLists.txt  README.md  itk_to_vtk.cxx
pick_region/: CMakeLists.txt  README.md  pick_region.cxx
read_dcm/: CMakeLists.txt  read_dcm.cxx
read_dcm_itk/: CMakeLists.txt  read_dcm_itk.cxx
sharpen/: CMakeLists.txt  sharpen.cxx
smooth/: CMakeLists.txt  README.md  smooth.cxx
tmp/: CMakeLists.txt  tmp.cxx
